# DiffCSPNew

./: .gitignore  README.md  TransformerDataset.py  crystal_family.py  cspnet.py  data_utils.py  dataset.py  diffusion.py  diffusion1.py  inference.py  matrix.py  pyproject.toml  requirements.txt  test.py  test1.py  train.py  train.sbatch  utils.py
