[tool.poetry]
name = "diffcspnew"
version = "0.1.0"
description = ""
authors = ["Nikita Kazeev <kazeevn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "1.4.4"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
click = "8.1.7"
contourpy = "1.2.0"
cycler = "0.12.1"
filelock = "3.9.0"
fonttools = "4.47.2"
fsspec = "2023.4.0"
future = "0.18.3"
gitdb = "4.0.11"
gitpython = "3.1.41"
idna = "3.4"
jinja2 = "3.1.2"
joblib = "1.3.2"
kiwisolver = "1.4.5"
latexcodec = "2.0.1"
markupsafe = "2.1.3"
matplotlib = "3.8.2"
monty = "^2024"
mpmath = "1.3.0"
networkx = "3.0"
numpy = "^1.26.3"
packaging = "23.2"
palettable = "3.3.3"
pandas = "^2.1.4"
pillow = "9.3.0"
plotly = "5.18.0"
protobuf = "4.25.2"
psutil = "5.9.7"
pybtex = "0.24.0"
pymatgen = "^2024"
pyparsing = "3.1.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
requests = "^2.28.1"
ruamel-yaml = "0.18.5"
ruamel-yaml-clib = "0.2.8"
scikit-learn = "1.3.2"
scipy = "^1.11.4"
sentry-sdk = "1.40.0"
setproctitle = "1.3.3"
six = "1.16.0"
smmap = "5.0.1"
spglib = "^2.2.0"
sympy = "^1.12"
tabulate = "0.9.0"
tenacity = "8.2.3"
threadpoolctl = "3.2.0"
tqdm = "4.66.1"
typing-extensions = "^4.4.0"
tzdata = "2023.4"
uncertainties = "3.1.7"
urllib3 = "1.26.13"
wandb = "^0.16.2"
torch-geometric = "^2.6.0"
pyxtal = "^1.0.6"
torch = {path = "/mnt/hdd/torch_wheels/torch-2.6.0a0+git3cbf0c0-cp312-cp312-linux_x86_64.whl"}
pytorch-triton = {path = "/mnt/hdd/torch_wheels/pytorch_triton-3.1.0+cf34004b8a-cp312-cp312-linux_x86_64.whl"}
torch-scatter = {path = "/mnt/hdd/torch_wheels/torch_scatter-2.1.2-cp312-cp312-linux_x86_64.whl"}
torch-sparse = {path = "/mnt/hdd/torch_wheels/torch_sparse-0.6.18-cp312-cp312-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
